--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ lerna-debug.log*
 
 #env
 .env
+
+#files
+/public/avatar/*
+/public/podcast/cover/*
+/public/episode/cover/*
+/public/episode/file/*
